--- a/app/views/avatax/configuration/_plugin_form.html.erb
+++ b/app/views/avatax/configuration/_plugin_form.html.erb
@@ -1,20 +1,20 @@
 <%= form_tag update_plugin_configuration_path, :class => 'form-horizontal' do %>
     <div class="form-group">
-      <%= label_tag :account_id, 'Account ID', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :account_id, 'Account ID', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax account number"} %>
       <div class="col-sm-10">
-        <%= text_field_tag :account_id, @configuration[:account_id], :class => 'form-control' %>
+        <%= text_field_tag :account_id, @configuration[:account_id], :class => 'form-control', :required => true %>
       </div>
     </div>
     <div class="form-group">
-      <%= label_tag :license_key, 'License key', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :license_key, 'License key', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax license key"} %>
       <div class="col-sm-10">
-        <%= text_field_tag :license_key, @configuration[:license_key], :class => 'form-control' %>
+        <%= text_field_tag :license_key, @configuration[:license_key], :class => 'form-control', :required => true %>
       </div>
     </div>
     <div class="form-group">
-      <%= label_tag :company_code, 'Company code', :class => 'col-sm-2 control-label' %>
+      <%= label_tag :company_code, 'Company code', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your company code"} %>
       <div class="col-sm-10">
-        <%= text_field_tag :company_code, @configuration[:company_code], :class => 'form-control' %>
+        <%= text_field_tag :company_code, @configuration[:company_code], :class => 'form-control', :required => true %>
       </div>
     </div>
     <div class="form-group">
@@ -31,4 +31,12 @@
         <%= submit_tag 'Save', :class => 'btn btn-default' %>
       </div>
     </div>
+<% end %>
+
+
+
+<%= javascript_tag do %>
+  $(function () {
+    $('[data-toggle="popover"]').popover()
+  })
 <% end %>
