--- a/app/views/avatax/configuration/_plugin_form.html.erb
+++ b/app/views/avatax/configuration/_plugin_form.html.erb
@@ -1,24 +1,24 @@
 <%= form_tag update_plugin_configuration_path, :class => 'form-horizontal' do %>
-    <div class="form-group">
-      <%= label_tag :account_id, 'Account ID', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax account number"} %>
-      <div class="col-sm-10">
+    <div class="form-group d-flex pb-3">
+      <%= label_tag :account_id, 'Account ID', :class => 'col-sm-3 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax account number"} %>
+      <div class="col-sm-9">
         <%= text_field_tag :account_id, @configuration[:account_id], :class => 'form-control', :required => true %>
       </div>
     </div>
-    <div class="form-group">
-      <%= label_tag :license_key, 'License key', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax license key"} %>
-      <div class="col-sm-10">
+    <div class="form-group d-flex pb-3">
+      <%= label_tag :license_key, 'License key', :class => 'col-sm-3 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your AvaTax license key"} %>
+      <div class="col-sm-9">
         <%= text_field_tag :license_key, @configuration[:license_key], :class => 'form-control', :required => true %>
       </div>
     </div>
-    <div class="form-group">
-      <%= label_tag :company_code, 'Company code', :class => 'col-sm-2 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your company code"} %>
-      <div class="col-sm-10">
+    <div class="form-group d-flex pb-3">
+      <%= label_tag :company_code, 'Company code', :class => 'col-sm-3 control-label', :data => {:toggle=>"popover", :trigger=> "hover", :content=> "Your company code"} %>
+      <div class="col-sm-9">
         <%= text_field_tag :company_code, @configuration[:company_code], :class => 'form-control', :required => true %>
       </div>
     </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
+    <div class="form-group d-flex justify-content-end pb-3 border-bottom mb-3">
+      <div class="col-sm-9">
         <div class="checkbox">
           <%= label_tag :commit_documents, 'Commit documents', :class => 'control-label' do %>
               <%= check_box_tag :commit_documents, '1', @configuration[:commit_documents] %>Commit documents?
@@ -26,10 +26,23 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <%= submit_tag 'Save', :class => 'btn btn-default' %>
-      </div>
+    <div class="form-group d-flex justify-content-end pb-3">
+        <%= render "kaui/components/button/button", {
+          label: 'Close',
+          variant: "outline-secondary d-inline-flex align-items-center gap-1",
+          type: "button",
+          html_class: "kaui-button custom-hover mx-2",
+          html_options: {
+            id: "closeButton",
+            onclick: "window.history.back();"
+          }
+        } %>
+        <%= render "kaui/components/button/button", {
+          label: 'Save',
+          variant: "outline-secondary d-inline-flex align-items-center gap-1",
+          type: "submit",
+          html_class: "kaui-dropdown custom-hover",
+        } %>
     </div>
 <% end %>
 
