--- a/app/views/avatax/configuration/index.html.erb
+++ b/app/views/avatax/configuration/index.html.erb
@@ -1,30 +1,77 @@
-<div class="search">
-
-  <div class="column-block">
-
-    <h1>Configured products
-      <%= link_to '&nbsp;<i class="fa fa-plus-square"></i>'.html_safe, set_tax_code_configuration_path %>
-    </h1>
-
-    <%= render :partial => 'avatax/configuration/products_table', :locals => {:tax_codes => @tax_codes} %>
-
+<div class="kaui-container configuration-index">
+  <%= render "kaui/components/breadcrumb/breadcrumb" %>
+  <div class="d-flex " style="gap: 4rem;">
+    <div class="configuration" style="max-width: '80rem';">
+      <div class="d-flex flex-column ">
+        <div class="configuration-header mb-4">
+          <div class="d-flex align-items-center">
+          <h2>Configured products</h2>
+          </div>
+          <span>
+            <%= link_to set_tax_code_configuration_path do %>
+              <%= render "kaui/components/button/button", {
+                label: "Add Product",
+                icon: "kaui/plus.svg",
+                variant: "outline-secondary d-inline-flex align-items-center gap-1",
+                type: "button",
+                html_class: "kaui-dropdown custom-hover",
+              } %>
+            <% end %>
+          </span>
+        </div>
+        <%= render :partial => 'avatax/configuration/products_table', :locals => {:tax_codes => @tax_codes} %>
+      </div>
+    </div>
   </div>
+</div>
 
-  <hr/>
-
-  <div class="column-block">
-
-    <h1>Exempt accounts
-      <%= link_to '&nbsp;<i class="fa fa-plus-square"></i>'.html_safe, set_exemption_configuration_path %>
-    </h1>
-
-    <%= render :partial => 'avatax/configuration/exemptions_table', :locals => {:exemptions => @exemptions} %>
-
+<div class="kaui-container configuration-index">
+  <div class="d-flex " style="gap: 4rem;">
+    <div class="configuration" style="max-width: '80rem';">
+      <div class="d-flex flex-column ">
+        <div class="configuration-header mb-4">
+          <div class="d-flex align-items-center">
+          <h2>Exempt accounts</h2>
+          </div>
+          <span>
+            <%= link_to set_exemption_configuration_path do %>
+              <%= render "kaui/components/button/button", {
+                label: "Add Exemption",
+                icon: "kaui/plus.svg",
+                variant: "outline-secondary d-inline-flex align-items-center gap-1",
+                type: "button",
+                html_class: "kaui-dropdown custom-hover",
+              } %>
+            <% end %>
+          </span>
+        </div>
+        <%= render :partial => 'avatax/configuration/exemptions_table', :locals => {:exemptions => @exemptions} %>
+      </div>
+    </div>
   </div>
+</div>
 
-
-  <hr/>
-
-  <h1><%= link_to 'Plugin configuration', plugin_configuration_path %></h1>
-
+<div class="kaui-container configuration-index">
+  <div class="d-flex " style="gap: 4rem;">
+    <div class="configuration" style="max-width: '80rem';">
+      <div class="d-flex flex-column ">
+        <div class="configuration-header mb-4">
+          <div class="d-flex align-items-center">
+          <h2>Plugin configuration</h2>
+          </div>
+          <span>
+            <%= link_to plugin_configuration_path do %>
+              <%= render "kaui/components/button/button", {
+                label: "Update Plugin Configuration",
+                icon: "kaui/plus.svg",
+                variant: "outline-secondary d-inline-flex align-items-center gap-1",
+                type: "button",
+                html_class: "kaui-dropdown custom-hover",
+              } %>
+            <% end %>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
