--- a/app/views/avatax/configuration/_exemptions_table.html.erb
+++ b/app/views/avatax/configuration/_exemptions_table.html.erb
@@ -10,8 +10,8 @@
       <div class="header-content">
         <span class="header-text">Account ID</span>
         <div class="sort-icons">
-          <%= image_tag "sort-up.svg", class: "sort-icon sort-asc" %>
-          <%= image_tag "sort-down.svg", class: "sort-icon sort-desc" %>
+          <%= image_tag "avatax/sort-up.svg", class: "sort-icon sort-asc" %>
+          <%= image_tag "avatax/sort-down.svg", class: "sort-icon sort-desc" %>
         </div>
       </div>
     </th>
@@ -19,8 +19,8 @@
       <div class="header-content">
         <span class="header-text">Customer Usage Type</span>
         <div class="sort-icons">
-          <%= image_tag "sort-up.svg", class: "sort-icon sort-asc" %>
-          <%= image_tag "sort-down.svg", class: "sort-icon sort-desc" %>
+          <%= image_tag "avatax/sort-up.svg", class: "sort-icon sort-asc" %>
+          <%= image_tag "avatax/sort-down.svg", class: "sort-icon sort-desc" %>
         </div>
       </div>
     </th>
