Refactor UI components for consistency and update placeholder comments

--- a/app/views/avatax/configuration/index.html.erb
+++ b/app/views/avatax/configuration/index.html.erb
@@ -1,8 +1,8 @@
 <div class="kaui-container configuration-index">
   <%= render "kaui/components/breadcrumb/breadcrumb" %>
-  <div class="d-flex " style="gap: 4rem;">
-    <div class="configuration" style="max-width: '80rem';">
-      <div class="d-flex flex-column ">
+  <div class="d-flex" style="gap: 4rem;">
+    <div class="configuration" style="max-width: 80rem;">
+      <div class="d-flex flex-column">
         <div class="configuration-header mb-4">
           <div class="d-flex align-items-center">
           <h2>Configured products</h2>
@@ -26,9 +26,9 @@
 </div>
 
 <div class="kaui-container configuration-index">
-  <div class="d-flex " style="gap: 4rem;">
-    <div class="configuration" style="max-width: '80rem';">
-      <div class="d-flex flex-column ">
+  <div class="d-flex" style="gap: 4rem;">
+    <div class="configuration" style="max-width: 80rem;">
+      <div class="d-flex flex-column">
         <div class="configuration-header mb-4">
           <div class="d-flex align-items-center">
           <h2>Exempt accounts</h2>
@@ -52,9 +52,9 @@
 </div>
 
 <div class="kaui-container configuration-index">
-  <div class="d-flex " style="gap: 4rem;">
-    <div class="configuration" style="max-width: '80rem';">
-      <div class="d-flex flex-column ">
+  <div class="d-flex" style="gap: 4rem;">
+    <div class="configuration" style="max-width: 80rem;">
+      <div class="d-flex flex-column">
         <div class="configuration-header mb-4">
           <div class="d-flex align-items-center">
           <h2>Plugin configuration</h2>
